--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
@@ -1,8 +1,24 @@
 ﻿<ion-view view-title="Rewards">
     <ion-content>
-        <h1>Reward 01</h1><br />
-        <h1>Reward 02</h1><br />
-        <h1>Reward 03</h1><br />
-        <h1>Reward 04</h1><br />
+        <div class="bar bar-royal row">
+            <div class="col col-10 col-center">
+                <i>
+                    <img src="img/Icons/StarWhite.png" height="20" />
+                </i>
+            </div>
+            <div class="col col-center">
+                แต้มสะสม 7500
+            </div>
+            <div class="col col-center">
+                <a menu-close href="#/rewards/rewards" class="button-small button button-full bg-yellow">
+                    ใช้คูปอง
+                </a>
+            </div>
+        </div>
+        <div class=" bar-stable ">
+            <div class="">
+                แต้มสะสม 7500
+            </div>
+        </div>
     </ion-content>
 </ion-view>
