--- a/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
+++ b/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
@@ -19,14 +19,15 @@ $stable:                          #dedede ;
 $positive:                        #233b83 ;
 $calm:                            #4F629c ;
 $balanced:                        #00b95c ;
-$energized:                       #ffc547 ;
+$energized:                       #F69853 ;
 $dark:                            #282828 ;
 $royal:                           #4d4d4d ; 
 
-$button-stable-active-bg:         #e5e5e5 ;
-$font-size-large:                 20px ; // font-large
-$border-radius-large:             6px ; // button-radius
 $button-energized-text:           #000000 ; //text-black
+$button-stable-text:              $button-energized-text;
+$button-stable-active-bg:         #e5e5e5 ;
+$font-size-large:                 18px ; // font-large
+$border-radius-large:             6px ; // button-radius
 $bar-height:                      60px; 
 $button-dark-text:                #ffffff ; //text-white
 $tabs-dark-text:                  $button-dark-text !default;
@@ -159,6 +160,9 @@ a {
 .text-dark{
     color:$button-energized-text !important;
 }
+.text-gray{
+    color:#cdcdcd;
+}
 .font-large{
     font-size:$font-size-large;
 }
@@ -200,20 +204,22 @@ a {
     background:$royal;
 }
 .tabs-striped.tabs-stable .tabs{
-    background:darken($button-stable-active-bg,10%);
+    background:lighten($button-stable-active-bg,5%);
 }
 
 .tabs-stable.tabs-top.tabs-striped .tab-item.tab-item-active, .tabs-stable.tabs-top.tabs-striped .tab-item.active, .tabs-stable.tabs-top.tabs-striped .tab-item.activated{
     background:$stable ;
+    border-width: 0 0 0 0 !important;
+    margin-top: 0 !important;
 }
+
 
 .tabs-striped.tabs-dark .tab-item {
     color: rgba(255, 255, 255, 1);
 }
-
-.item.item-royal {
-    border: 0px;
-    margin: 0px;
+.side-menu .item.item-royal{
+    border:0px;
+    margin:0px;
 }
 
 .button.bg-yellow {
