--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
@@ -1,6 +1,6 @@
-﻿<ion-view view-title="Rewards">
+﻿<ion-view view-title="DAILY SOCCER">
     <ion-content>
-        <div class="bar bar-royal row">
+        <ion-item class="bar bar-royal row">
             <div class="col col-10 col-center">
                 <i>
                     <img src="img/Icons/StarWhite.png" height="20" />
@@ -10,14 +10,41 @@
                 แต้มสะสม 7500
             </div>
             <div class="col col-center">
-                <a menu-close href="#/rewards/rewards" class="button-small button button-full bg-yellow">
-                    ใช้คูปอง
+                <a menu-close href="#/rewards/rewards" class=" button button-full bg-yellow font-large">
+                    ซื้อคูปอง
                 </a>
             </div>
-        </div>
-        <div class=" bar-stable ">
+        </ion-item>
+        <div class="item item-stable no-border">
             <div class="">
-                แต้มสะสม 7500
+                แลกซื้อคูปองไปแล้วทั้งหมด 5 ใบ
+            </div>
+        </div>
+        <div class="item no-border text-center">
+            <div class="">
+                รางวัลประจำสัปดาห์
+            </div>
+        </div>
+        <div class="item no-border text-right">
+            <div>
+                <img class="col" src="http://www.samsung.com/th/consumer-images/product/smartphone/2015/SM-G920FZKACAM/features/SM-G920FZKACAM-403979-0.jpg"/>
+            </div>
+            <div class="">
+                จำนวนรางวัลที่เหลือ 5 ชิ้น
+            </div>
+        </div>
+        <div class="item no-border text-right">
+            <div>
+                <img class="col" src="http://www.samsung.com/th/consumer-images/product/smartphone/2015/SM-G920FZKACAM/features/SM-G920FZKACAM-403979-0.jpg" />
+            </div>
+            <div class="">
+                จำนวนรางวัลที่เหลือ 2 ชิ้น
+            </div>
+        </div>
+        <!-- No Reward -->
+        <div class="item no-border text-right">
+            <div>
+                <img class="col" src="img/Logos/NoReward.png" />
             </div>
         </div>
     </ion-content>
