--- a/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
+++ b/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
@@ -288,3 +288,13 @@ i {
         font-size: 12px;
     }
 }
+.login .scroll-content {
+  display: table !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+.login .scroll {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
