--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
@@ -30,7 +30,7 @@
                 <img class="col" src="http://www.samsung.com/th/consumer-images/product/smartphone/2015/SM-G920FZKACAM/features/SM-G920FZKACAM-403979-0.jpg"/>
             </div>
             <div class="">
-                จำนวนรางวัลที่เหลือ 5 ชิ้น
+                จำนวน 5 รางวัล
             </div>
         </div>
         <div class="item no-border text-right">
@@ -38,7 +38,7 @@
                 <img class="col" src="http://www.samsung.com/th/consumer-images/product/smartphone/2015/SM-G920FZKACAM/features/SM-G920FZKACAM-403979-0.jpg" />
             </div>
             <div class="">
-                จำนวนรางวัลที่เหลือ 2 ชิ้น
+                จำนวน 2 รางวัล
             </div>
         </div>
         <!-- No Reward -->
