--- a/src/DailySoccerSolution/DailySoccerMobile/www/css/ionic.app.css
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/css/ionic.app.css
@@ -9240,9 +9240,12 @@ a {
   background: #f2f2f2; }
 
 .tabs-stable.tabs-top.tabs-striped .tab-item.tab-item-active, .tabs-stable.tabs-top.tabs-striped .tab-item.active, .tabs-stable.tabs-top.tabs-striped .tab-item.activated {
-  background: #dedede;
-  border-width: 0 0 0 0 !important;
-  margin-top: 0 !important; }
+  background: #dedede; }
+
+.tabs-top.tabs-striped .tab-item.tab-item-active, .tabs-top.tabs-striped .tab-item.active, .tabs-top.tabs-striped .tab-item.activated {
+  margin-top: 0px !important;
+  border-width: 0px 0px 0px 0px !important;
+  border-style: solid; }
 
 .tabs-striped.tabs-dark .tab-item {
   color: white; }
