--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
@@ -12,13 +12,13 @@
             <div class="row row-center">
                 <div class="col col-center">
                     <div class="">
-                        <img class="col-67" src="img/Logos/LogoLogin.png" />
+                        <img class=" col col-75 block-center" src="img/Logos/LogoLogin.png" />
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <button ng-click="accountCtrl.LoginWithFacebook()" class="button button-large col col-80 block-center button-calm">เข้าใช้งานผ่าน Facebook</button>
+                    <button ng-click="accountCtrl.LoginWithFacebook()" class="button button-large col col-75 block-center button-calm">เข้าใช้งานผ่าน Facebook</button>
                 </div>
             </div>
         </ion-content>
