Implement UI BuyTicket

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
@@ -1,5 +1,29 @@
 ﻿<ion-view view-title="DAILY SOCCER">
     <ion-content>
-      
+        <br />
+        <div class="col col-80 col-offset-10">
+            <p>
+                แต้มสะสมทั้งหมด 7500 คะแนน
+            </p>
+            <p>
+                แลกคูปองได้สูงสุด 25 ใบ
+            </p>            
+        </div>
+        <br />
+        <form class="text-center">
+            <p class="col row font-large">
+               <b>ซื้อคูปอง จำนวน</b> 
+            </p>
+            <div class="col row">
+                <p>
+                    <input type="number" class=" col col-50 input-number block-center no-padding" />
+                </p>
+            </div>
+            <div class="col row">
+                <button class="button bg-yellow col col-50 button-small block-center font-large">
+                    ส่งคูปองลุ้นรางวัล
+                </button>
+            </div>
+        </form>
     </ion-content>
 </ion-view>
