--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
@@ -10,7 +10,7 @@
                 แต้มสะสม 7500
             </div>
             <div class="col col-center">
-                <a menu-close href="#/rewards/rewards" class=" button button-full bg-yellow font-large">
+                <a menu-close href="#/ticket/buyticket" class=" button button-full bg-yellow font-large">
                     ซื้อคูปอง
                 </a>
             </div>
