--- a/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
+++ b/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
@@ -121,10 +121,10 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 }
 
 .block-center {
-    margin-left: auto;
-    margin-right: auto;
-    float: none;
-    display: inline-block;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    float: none !important;
+    display: inline-block !important;
 }
 
 .space-top {
@@ -315,4 +315,9 @@ i {
 
 ion-modal-view{
     border-radius:  20px;
+}
+.input-number{
+        border: 1px solid !important;
+    border-radius: 6px !important;
+    text-align:center!important;
 }
