Implement UI BuyTicketCompleted

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
@@ -20,9 +20,9 @@
                 </p>
             </div>
             <div class="col row">
-                <button class="button bg-yellow col col-50 button-small block-center font-large">
+                <a href="#/buyticketcompleted/buyticketcompleted" class="button bg-yellow col col-50 button-small block-center font-large">
                     ส่งคูปองลุ้นรางวัล
-                </button>
+                </a>
             </div>
         </form>
     </ion-content>
