--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketCompleted.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketCompleted.html
@@ -1,9 +1,19 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-    <div>Content goes here.</div>
-</body>
-</html>
+﻿<ion-view class="bg-main login">
+    <ion-content class="text-white font-large">
+        <p>
+            คุณเหลือแต้มที่ใช้ได้
+        </p>
+        <p class="font-large">
+            125 แต้ม
+        </p>
+        <br />
+        <p>รอประกาศผลรายชื่อผู้โชคดี <br /> ในวันที่ 20 ธันวาคม 2558 <br /> ขอบพระคุณที่ร่วมสนุกกับเรา</p>
+    </ion-content>
+    <ion-footer-bar align-title="left" class="bar-balanced">
+        <h1 class="title text-right">
+            <a menu-close href="#/rewards/rewards">
+                เสร็จสิ้น >>
+            </a>
+        </h1>
+    </ion-footer-bar>
+</ion-view>
