Implement login with guest
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -57,7 +57,7 @@
                 </div>
                 
             </ion-item>
-            <ion-item menu-close href="#" class="item-royal">
+            <ion-item menu-close href="#" class="item-royal" ng-click="matchCtrl.Logout()">
                 <div class="text-gray">
                     <i>
                         <img class="vertical-middle" src="img/Icons/MenuIcon5.png" />
