--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByMonth.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByMonth.html
@@ -1,5 +1,8 @@
 ﻿<ion-view view-title="History by month">
     <ion-content>
+        <div class="buttons">
+            <button class="button button-dark" ng-click="openModal()">Modal</button>
+        </div>
         <button class="button button-block button-stable">
             stable
         </button>
