Implement UI MyRewards ,RewardWinner

--- a/src/DailySoccerSolution/DailySoccerMobile/www/css/ionic.app.css
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/css/ionic.app.css
@@ -9267,7 +9267,7 @@ button.button-balanced h3 {
   color: #fff !important; }
 
 i {
-  width: 20%; }
+  font-style: italic !important; }
 
 .font-large {
   font-size: 18px; }
