Add modal dialog.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
@@ -24,6 +24,9 @@
                 <ion-view view-title="Welcome">
                     <ion-content>
                         <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
+                        <div class="buttons">
+                            <button class="button button-dark" ng-click="openModal()">Modal</button>
+                        </div>
                         <h1>
                             Tab 2
                         </h1>
